Fix the WWM Collapse 3 layout in admin pages where the regions disappear when empty.

--- a/plugins/layouts/wwm_collpase_3/wwm_collapse_3.scss
+++ b/plugins/layouts/wwm_collpase_3/wwm_collapse_3.scss
@@ -5,7 +5,7 @@
 @import "bourbon", "neat";
 
 /* These are the rules that maintain the original layout in customize mode and in admin pages*/
-.page-admin
+.page-admin,
 #page-manager-edit,
 #panelizer-edit-content-form,
 .panels-ipe-editing,
